<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="143dp"
        android:layout_height="125dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/buscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_input_get" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/et_pass"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/contrasena"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <Button
        android:id="@+id/bt_log"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:background="@color/colorPrimary"
        android:text="@string/entrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pass" />

    <Button
        android:id="@+id/bt_register"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/regi2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_log" />

</androidx.constraintlayout.widget.ConstraintLayout>